--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,60 @@
 @import "tailwindcss";
+@custom-variant dark (&:where(.dark, .dark *));
 @source "../node_modules/react-tailwindcss-datepicker/dist/index.esm.js";
-@plugin "daisyui" {
-    themes: light --default, dark --prefersdark, autumn;
+@plugin "daisyui";
+@plugin "daisyui/theme" {
+  name: "saboga";
+  default: true; /* set as default */
+  prefersdark: false; /* set as default dark mode (prefers-color-scheme:dark) */
+  color-scheme: light; /* color of browser-provided UI */
+
+  --color-base-100: oklch(98.89% 0.004 286.33);
+  --color-base-200: oklch(95.89% 0.004 286.33);
+  --color-base-300: oklch(92.89% 0.004 286.33);
+  --color-base-content: oklch(18.31% 0.004 285.99);
+
+  --color-primary: oklch(75.55% 0.131 220.36);
+  --color-primary-content: oklch(18.31% 0.004 285.99);
+
+  --color-secondary: oklch(81.21% 0.075 80.57);
+  --color-secondary-content: oklch(18.31% 0.004 285.99);
+
+  --color-accent: oklch(79.61% 0.147 129.9);
+  --color-accent-content: oklch(18.31% 0.004 285.99);
+
+  --color-neutral: oklch(50% 0.05 240);
+  --color-neutral-content: oklch(98% 0.01 240);
+
+  --color-info: oklch(70% 0.2 220);
+  --color-info-content: oklch(98% 0.01 220);
+
+  --color-success: oklch(65% 0.25 140);
+  --color-success-content: oklch(98% 0.01 140);
+
+  --color-warning: oklch(80% 0.25 80);
+  --color-warning-content: oklch(20% 0.05 80);
+
+  --color-error: oklch(65% 0.3 30);
+  --color-error-content: oklch(98% 0.01 30);
+
+  /* border radius */
+  --radius-selector: 1rem;
+  --radius-field: 0.25rem;
+  --radius-box: 0.5rem;
+
+  /* base sizes */
+  --size-selector: 0.25rem;
+  --size-field: 0.25rem;
+
+  /* border size */
+  --border: 1px;
+
+  /* effects */
+  --depth: 1;
+  --noise: 0;
 }
 
 .opacity-1 {
-    /* https://github.com/onesine/react-tailwindcss-datepicker/pull/307 */
-    @apply opacity-100;
+  /* https://github.com/onesine/react-tailwindcss-datepicker/pull/307 */
+  @apply opacity-100;
 }
